k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-ui
  namespace: openai-proxy
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[CONNECTED] == true"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: openai-ui
status:
  loadBalancer: {}
