k8s/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts
spec:
  headers:
    stsSeconds: 86400
    stsIncludeSubdomains: false
    stsPreload: false
    forceSTSHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: hsts@kubernetescrd
  name: openai.fh-swf.cloud-frontend
  namespace: openai-proxy
spec:
  rules:
  - host: openai.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: openai-ui
            port:
              number: 80
        path: /
        pathType: Prefix   
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: hsts@kubernetescrd
  name: openai.ki.fh-swf.de-frontend
  namespace: openai-proxy
spec:
  rules:
  - host: openai.ki.fh-swf.de
    http:
      paths:
      - backend:
          service:
            name: openai-ui
            port:
              number: 80
        path: /
        pathType: Prefix
